fix: images relative path

--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
 
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <link rel="stylesheet" href="/Modern Web-Dev/animation/style.css" >
 
 </head>
@@ -65,27 +63,27 @@
 
         <div id="second">
             <div class="elem">
-                <img src="/Modern Web-Dev/images/6.jpeg" alt="">
+                <img src="./images/6.jpeg" alt="">
                 <h1>Lucid motors</h1>
                 <h5>2023</h5>
             </div>
             <div class="elem">
-                <img src="/Modern Web-Dev/images/10.webp" alt="">
+                <img src="./images/10.webp" alt="">
                 <h1>baron capital</h1>
                 <h5>2023</h5>
             </div>
             <div class="elem">
-                <img src="/Modern Web-Dev/images/16.webp" alt="">
+                <img src="./images/16.webp" alt="">
                 <h1>Nfl</h1>
                 <h5>2024</h5>
             </div>
             <div class="elem">
-                <img src="/Modern Web-Dev/images/2.jpg" alt="">
+                <img src="./images/2.jpg" alt="">
                 <h1>placenew</h1>
                 <h5>2024</h5>
             </div>
             <div class="elem elemlast">
-                <img src="/Modern Web-Dev/images/4.jpg" alt="">
+                <img src="./images/4.jpg" alt="">
                 <h1>somos</h1>
                 <h5>2024</h5>
             </div>
@@ -127,7 +125,8 @@
         </div>
 </body>
 
-
+<script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
 <script src="script.js"></script>
 
 </html>
